--- a/WebContent/resources/asset/css/common.css
+++ b/WebContent/resources/asset/css/common.css
@@ -553,6 +553,16 @@ input {
     margin-top: 20px;
 }
 
+.join_table .item_box input[readonly=readonly] {
+    display: block;
+    overflow: hidden;
+    width: 90%;
+    height: 49px;
+    padding: 0 3%;
+    margin-top: 20px;
+    color: #888;
+}
+
 .join_table .id_check {
 	display: inline-block;
 	padding: 6px 13px;
@@ -648,3 +658,27 @@ input {
 }
 
 
+
+
+#wrap_content {
+	padding-top: 70px;
+}
+
+#wrap_content .wrap_top_summary {
+    position: relative;
+    width: 100%;
+    height: 376px;
+    margin-bottom: 20px;
+}
+
+#wrap_content .wrap_top_summary .cover {
+	height: 100%;
+	position: absolute;
+	background-color: #0006;
+}
+
+#wrap_content .wrap_top_summary .cont_visual {
+	height: 100%;
+	background-size: cover;
+    background-color: rgb(59, 56, 32);
+}
